# Uni-DeepLearning-Aplhabet-Classification

./: .gitignore  README.md  Visualize_raw_data.ipynb  augmentation.ipynb  balance_data.ipynb  preprocessing-and-merge.ipynb  pyproject.toml
Final Model NoteBooks/: inception-v1-yarab.ipynb  mobile-net-alphabet-classification.ipynb  mobile_net_alphabet_classification.ipynb  resnet-alphabet-classification.ipynb  vgg-19-model-arabic-data.ipynb
